========================================
Change log for tool_fixlinks
========================================

2019-11-10 (09)
 - standardize layout and spelling in CHANGES.txt

2017-06-15 (07)
 - mimic 'build_node_path' to encode directory paths in Moodle >= 3.1

2016-08-24 (05)
 - standardize 'die;' to 'die();'

2016-03-18 (04)
 - move this item to Plugins -> Admin tools in navigation menu

2016-03-16 (03)
 - fix name of constructor method in tool_fixlinks_form class

2016-02-01 (02)
 - use moodleform::construct() when available for compatability with Moodle >= 3.0

2015-12-02 (01)
 - prevent timeout and disable activities that cannot yet be fixed

2015-04-01 (00)
 - initial import of fixlinks files